@@ -1,3 +1,9 @@
+2011-03-06  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	Backport from mainline
+	PR libgfortran/47778
+	* gfortran.dg/namelist_71.f90: New test.
+
 2011-03-04  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	Backport from mainline
